# terraforge

./: .gitignore  README.md  Technical_GuideV1.md  Whitepaper.md  get-terraforge.sh  pyproject.toml  release_prep.py  requirements.txt  setup.sh  terraforge.py
.github/workflows/: release.yml
Formula/: terraforge.rb
coordinator/config/: Caddyfile  docker-compose.yml  headscale.yaml
coordinator/scripts/: deploy.sh  health_check.sh
coordinator/terraform/: cloud_init.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
examples/: fullstack-nextjs.md  go-microservices.json  python-ml.yaml
server/: Dockerfile  main.py
src/: __init__.py  telemetry.py
src/coordinator/: __init__.py  bootstrap.py  prompts.py
src/core/: coder_client.py  generator.py
src/llm/: router.py
src/parsers/: input_parser.py
src/validators/: terraform.py
src/web/: graph_service.py  index.html  landing.html  server.py
tests/: test_terraforge.py
